addition of datasource libraries
