# src/models/attendance.model.ts
@@ -1,8 +1,13 @@
 export class Attendance {
 
-    id: number | undefined;
+    frequency: Frequency | undefined;
 
-    frequency: undefined | Weekly | Reserved;
+    intervals!: Interval[];
 
-    intervals: Interval[] = [];
+    id() : number {
+        let s = JSON.stringify(this);
+        for(var i = 0, h = 0; i < s.length; i++)
+            h = Math.imul(31, h) + s.charCodeAt(i) | 0;
+        return h;
+    }
 }
