# src/models/frequency.model.ts
@@ -1,0 +1,4 @@
+interface Frequency {
+    
+    doAlgorithm(): void;
+}
